# python-switchbot

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: build.yaml  check.yaml
examples/: authentication.py  dump.py
switchbot/: __init__.py  client.py  devices.py  enums.py  remotes.py  scene.py  utils.py
