[metadata]
name = python-switchbot
version = attr: switchbot.__version__
description = A Python library to control SwitchBot devices connected to SwitchBot Hub
author = Jonghwan Hyeon
author_email = jonghwanhyeon93@gmail.com
url = https://github.com/jonghwanhyeon/python-switchbot
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    switchbot
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Home Automation

[options]
install_requires =
    requests
    pyhumps
python_requires = >=3.7
packages = find: